force-app/main/default/objects/Deferred_Batch_Job__c/Deferred_Batch_Job__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the Deferred Execution details of a Job</description>
    <label>Deferred Batch Job</label>
    <nameField>
        <label>Deferred Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deferred Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>