force-app/main/default/objects/Deferred_Batch_Job__c/fields/Executing_User__c.field-meta.xml
<CustomField>
    <fullName>Executing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who should be the context user for running of this batch? Framework will attempt to schedule the job execution to keep current context if this is set.</description>
    <label>Executing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deferred_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>