force-app/main/default/objects/Deferred_Batch_Job__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>Date/time when the deferred batch is executed</description>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>