force-app/main/default/objects/Deferred_Batch_Job__c/fields/Serialized_Inputs__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Inputs__c</fullName>
    <description>Inputs the batch needs to run. Implementing class handles the serialization/deserialization of inputs</description>
    <label>Serialized Inputs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>